--- a/2/index.html
+++ b/2/index.html
@@ -21,6 +21,7 @@ de un segundo, al volver hacer click debe volver a estar en blanco y negro.
   }
   img.color {
   	filter: none;
+  	transition:15s;
   }
 </style>
 </head>
@@ -211,7 +212,7 @@ de un segundo, al volver hacer click debe volver a estar en blanco y negro.
 	</div>
 
 
-
+ 
 <script type="text/javascript">
 $(document).ready(function(){
     // $(".card img").css("filter", "grayscale(80%)");
@@ -221,6 +222,8 @@ $(document).ready(function(){
 
     $(".card img").on('click', function(){
     	$(this).toggleClass('color');
+    	$(this).css('');
+
     })
 
 
